# myPP

./: README.md  pyproject.toml  setup_myPP.py
src/myPP/: __init__.py  __main__.py
src/myPP/A/: __init__.py  main.py
src/myPP/B/: __init__.py  helper.py
