[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "myPP"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A sample package with wxPython message box"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
     "wxPython>=4.2.1",
     "numpy>=1.26.0",
     "h5py>=3.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
myPP = "myPP.A.main:show_message_box"
 