[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "myPP"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A sample package with wxPython message box"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
     "wxPython>=4.2.1",
     "numpy>=1.26.0",
     "h5py>=3.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
myPP_cli = "myPP.__main__:mymain"
# The mypp.exe (or mypp script) is installed in Python's Scripts folder. Locate it by running
#python -c "import sys; print(sys.executable)"
#C:\Users\masoud\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\LocalCache\local-packages\Python312\Scripts\myPP.exe
#set PATH=%PATH%;C:\Path\to\Python\Scripts